# pinn-nlse

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: ground_truth_summary.json  provenance.json  ssfm_validation_metrics.json
logs/: speed_benchmark.json
logs/published/: gaussian_dispersion_data_augmented_training_history.json  gaussian_dispersion_data_augmented_training_metadata.json  soliton_data_augmented_training_history.json  soliton_data_augmented_training_metadata.json
models/published/: README.md  gaussian_dispersion_data_augmented_final.pt  soliton_data_augmented_final.pt
notebooks/: 01_ssfm_validation.ipynb  02_pinn_training.ipynb  03_comparison.ipynb
report/: technical_report.md
scripts/: rebuild-local-history.ps1
src/: __init__.py  benchmark.py  compare.py  config.py  data_gen.py  generate_ground_truth.py  nlse_utils.py  pinn_nlse.py  ssfm.py  train.py  utils.py
tests/: smoke_test.py  test_artifact_inventory.py  test_compare_cli.py  test_data_gen.py  test_pinn_residual.py  test_rebuild_history_script.ps1  test_ssfm_import.py  test_training_smoke.py  test_utils.py
